# vis_lem-in

./: .clang-format  .gitignore  .gitmodules  10.map  CMakeLists.txt  Makefile  check_all.c  init_sdl.c  line_parse.c  links_parse.c  load_font.c  load_image.c  read_file.c  rooms_parse.c  vis_lemin.c  vis_lemin.h
includes/: process_events.h  vis_lemin.h
lib/: libSDL2-2.0.0.dylib  libSDL2_image.dylib  libSDL2_ttf.dylib
maps2/: model_3
srcs/: calc_sizes.c  check_all.c  destroy.c  draw_all.c  draw_arc.c  draw_elems.c  draw_fat_line.c  draw_roomants.c  get_dims.c  init_sdl.c  init_timers.c  links_parse.c  load_font.c  load_image.c  process_events.c  read_file.c  rooms_parse.c  vis_lemin.c
